added content to index, and started css. also added blank js

--- a/index.html
+++ b/index.html
@@ -12,17 +12,67 @@
 <body>
     <header>
         <h1>Tong's Quiz</h1>
-        <div class="timer">
+        <div>
             <h2>Timer</h2>
             <div>
     </header>
-    <Section >
+    <Section id="fq">
         <div class="questions">
-            <div class="w-i-a-c-s">
-                <h2>What is a class selector?</h2>
+            <div>
+                <h2>Which is has the biggest text?</h2>
             </div>
-                <button id="generate" class="btn">Generate Password</button>
-            </div>
+            <ol id="guess">
+                <li href="right" class="btn">H1</li>
+                <li href="wrong" class="btn">H2</li>
+                <li href="wrong" class="btn">H3</li>
+            </ol>
+        </div>
+        </div>
+    </Section>
+    <Section id="sq">
+        <div class="questions">
+            <h2> What comes first in a HTML?</h2>
+        </div>
+        <div class="questions">
+            <ol id="guess">
+                <li href="wrong" class="btn">Body</li>
+                <li href="wrong" class="btn">Head</li>
+                <li href="right" class="btn">Meta Tags</li>
+            </ol>
+        </div>
+    </Section>
+    <section>
+        <div class="questions">
+            <h2>What kind of bear is best?</h2>
+            <ol id="guess">
+                <li href="right" class="btn">Black bear</li>
+                <li href="wrong" class="btn">Beets</li>
+                <li href="wrong" class="btn">Battlestar Galactica</li>
+            </ol>
+        </div>
+    </section>
+    <section>
+        <div class="questions">
+            <h2>What date does is Lisa's birthday from the simpsons land on?</h2>
+            <ol id="guess">
+                <li href="wrong" class="btn">May 4th 1992</li>
+                <li href="right" class="btn">May 9th 1981</li>
+                <li href="wrong" class="btn">May 5th 1862</li>
+            </ol>
+        </div>
+    </section>
+    <section>
+        <div class="questions">
+            <h2></h2>
+            <ol id="guess">
+
+            </ol>
+        </div>
+    </section>
+    <Section>
+        <div id="correction" class="rorw">
+            <p>Correct!</p>
+            <p>Wrong!</p>
         </div>
     </Section>
     <script src="script.js"></script>
