changes to function to start quiz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Tong's Quiz</h1>
         <div>
-            <h2 id="time">Timer:</h2>
+            <h2 id="timer">Timer:</h2>
             <div>
     </header>
 
@@ -23,7 +23,7 @@
         <div id="bign">
             <p> Click the "Begin" button to start.</p>
         </div>
-        <div class="btn">
+        <div class="btn" type="button">
             Begin
         </div>
     </section>
