starting local sotrage

--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
             <label id="wrng"></label>
         </div>
     </Section>
-
+    <!--local storage: scoreboard-->
+<section>
+    <div id="scoreboard">
+    <h2 id="score" class="scores"></h2>
+    <form>
+      <label for="initial">Enter name</label><br>
+      <input id="initial" type="text" maxlength="10"><br>
+      <input id="sub" type="submit">
+    </form>
+</div>
+</section>
     <!--footer shows what happens when you do it wrong.-->
     <footer>
         Every wrong answer will result in -2 seconds!!!
